[package]
name = "ephemeris"
version = "0.1.0"
edition = "2021"
author = "tyxk8160"
license = "Apache-2.0"
description = "A Rust crate for working with astronomical calendars and events"
keywords = ["astronomy", "calendar", "lunar", "solar", "zodiac"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc_assets/docs-header.html" ]