[package]
name = "ephemeris_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ephemeris"
crate-type = ["cdylib"]

# [build-dependencies]
# built = { version = "0.4", features = ["chrono"] }

[dependencies]
pyo3 = "0.19.0"

[dependencies.rust-ephemeris]
path = "../../ephemeris"
version = "0.1.0-beta"


# pyo3-built = "0.4"