[metadata]
name = ephemeris
version = 0.1.0
license = MIT
url = https://github.com/PyO3/setuptools-rust/blob/main/examples/html-py-ever
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = ephemeris
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.7
include_package_data = True