[package]
name = "ephemeris"
version = "0.1.0"
authors = ["天涯行客 <tramy1234@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.5"
serde_json = "1"
wasm-bindgen = "0.2.84"

[dependencies.rust-ephemeris]
path = "../../ephemeris"
version = "0.1.0-beta"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
